# web-chat

./: .env.example  .gitignore  BACKLOG.md  FIX-IT.md  FIX-IT2.md  HANDBOOK.md  README.md  SECURITY.md  Sys-prompt.md  TODO-2.md  TODO.md  alembic.ini  pyproject.toml  requirements-dev.txt  requirements.txt  restart.sh
alembic/: env.py
app/: __init__.py  config.py  constants.py  datetime_utils.py  diag_logging.py  errors.py  log_context.py  logging_buffer.py  logging_setup.py  main.py  public_url.py
deploy/: AUTH.md  DATABASE-BACKUP.md  DEPLOY.md  MULTI-USER.md  POSTGRES.md  RAG.md  backup-data.sh  backup-database.sh  backup-postgres.sh  install.sh  logrotate-web-chat.conf  logrotate-web-chat.conf.template  nginx-web-chat.conf.template  restore-database.sh  wd-tagger-install.sh  web-chat-cleanup.service  web-chat-cleanup.service.template  web-chat-cleanup.timer  web-chat.service  web-chat.service.template
docs/: API-FROM-IMAGE.md  HANDBOOK.md  RUNBOOK.md  SECURITY.md  Sys-prompt.md
extensions/: README.md
refs/: main.py
scripts/: backup-all.sh  backup-database.sh  backup-postgres.sh  capture-debug-snapshot.py  mount-reforge-ext.sh  restore-database.sh
templates/: chat.html  gallery-uploads.html  gallery.html  health.html  login.html  macros.html
tests/: cleanup.py  conftest.py  conventions.py  helpers.py  safety.py  test_agent_anti_loop.py  test_agent_orchestrator.py  test_agent_orchestrator_wd14.py  test_alembic_migrations.py  test_api_turn.py  test_app_errors.py  test_auth.py  test_backlog_p0_security.py  test_backup_restore_smoke.py  test_cleanup_conversations.py  test_cleanup_service.py  test_composer_draft.py  test_config_api.py  test_conversation_import.py  test_conversation_import_external_url.py  test_conversation_title.py  test_conversation_tool_state.py  test_conversation_trash.py  test_conversations.py  test_db_url.py  (+98 more)
(+232 files in other folders)
