[project]
name = "web-chat"
version = "0.1.0"
description = "Монолитный LAN-чат с AI-агентом, MCP и Stable Diffusion"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "python-multipart>=0.0.9",
    "jinja2>=3.1",
    "pydantic-settings>=2.0",
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.20",
    "alembic>=1.13",
    "asyncpg>=0.29",
    "psycopg[binary]>=3.2",
    "psycopg2-binary>=2.9",
    "openai>=1.50",
    "httpx>=0.27",
    "fastmcp>=3.0",
    "pillow>=10.0",
    "requests>=2.31",
    "pymupdf>=1.24",
    "python-docx>=1.1",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.6",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["app", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ruff.lint.per-file-ignores]
"app/db/seed.py" = ["E501"]
"tests/test_sd_tools.py" = ["E501"]

[tool.ruff.format]
quote-style = "double"
